Fix z-index overlay splitbutton lista categorias

--- a/src/app/sistema/encuestas/lista-categorias/lista-categorias.component.scss
+++ b/src/app/sistema/encuestas/lista-categorias/lista-categorias.component.scss
@@ -259,7 +259,6 @@
 
 .post-module {
   position: relative;
-  z-index: 1;
   display: block;
   background: #ffffff;
   width: 100%;
